frontend/test/should_fail/exec_016.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  hom(a,b);
  a : A;
  b : B;
  modify{
    return (b);
    exec(c:Bcc=y & (c)=r(y));     // subtype as return var
  }
}
